--- a/jobs_EN.html
+++ b/jobs_EN.html
@@ -54,18 +54,8 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="jobs_EN.html">Jobs</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="errorPage_EN.html">Contact Us</a>
-                    </li> -->
-
-                    <li class="nav-item dropdown connectWithUsDropDown">
-                        <a class="nav-link">
-                            Contact Us
-                        </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="connect_with_us_EN.html">Contact Us</a>
-                            <a class="dropdown-item" href="call_us_EN.html">Call Us</a>
-                        </div> 
+                    <li class="nav-item">
+                        <a class="nav-link" href="connect_with_us_EN.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hsse_EN.html">HSSE</a>
@@ -109,18 +99,8 @@
                             <li class="nav-item">
                                 <a class="nav-link active" href="jobs_EN.html">Jobs</a>
                             </li>
-                            <!-- <li class="nav-item">
-                                <a class="nav-link" href="errorPage_EN.html">Contact Us</a>
-                            </li> -->
-
-                            <li class="nav-item dropdown connectWithUsDropDown">
-                                <a class="nav-link">
-                                    Contact Us
-                                </a>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="connect_with_us_EN.html">Contact Us</a>
-                                    <a class="dropdown-item" href="call_us_EN.html">Call Us</a>
-                                </div> 
+                            <li class="nav-item">
+                                <a class="nav-link" href="connect_with_us_EN.html">Contact Us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="hsse_EN.html">HSSE</a>
@@ -206,8 +186,8 @@
                     </div>
                 </div> 
                 <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns col-lg-4">
-                    <a href="#">Call us</a>
-                    <a href="#">Send request</a>
+                    <a href="call_us_EN.html">Call us</a>
+                    <a href="connect_with_us_EN.html">Send request</a>
                 </div>
             </div>
         </div>
