--- a/news_AR.html
+++ b/news_AR.html
@@ -54,18 +54,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="jobs_AR.html">الوظائف</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="errorPage_AR.html">تواصل معنا</a>
-                    </li> -->
-
-                    <li class="nav-item dropdown connectWithUsDropDown">
-                        <a class="nav-link">
-                            تواصل معنا
-                        </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="connect_with_us_AR.html">تواصل معنا</a>
-                            <a class="dropdown-item" href="call_us_AR.html">اتصل بنا</a>
-                        </div> 
+                    <li class="nav-item">
+                        <a class="nav-link" href="connect_with_us_AR.html">تواصل معنا</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hsse_AR.html">HSSE</a>
@@ -109,18 +99,8 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="jobs_AR.html">الوظائف</a>
                             </li>
-                            <!-- <li class="nav-item">
-                                <a class="nav-link" href="errorPage_AR.html">تواصل معنا</a>
-                            </li> -->
-
-                            <li class="nav-item dropdown connectWithUsDropDown">
-                                <a class="nav-link">
-                                    تواصل معنا
-                                </a>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="connect_with_us_AR.html">تواصل معنا</a>
-                                    <a class="dropdown-item" href="call_us_AR.html">اتصل بنا</a>
-                                </div> 
+                            <li class="nav-item">
+                                <a class="nav-link" href="connect_with_us_AR.html">تواصل معنا</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="hsse_AR.html">HSSE</a>
@@ -168,7 +148,7 @@
                         </div>
                         <div class="newsHeader text-center">
                             <h2>هو نص شكلي لا معنى له</h2>
-                        </div>
+                        </div> 
                         <div class="newsImg d-flex justify-content-center">
                             <img src="images/carInNatureBox.png" class="col-12 col-sm-8 col-md-12 col-xl-10" alt="">
                         </div>
@@ -497,8 +477,8 @@
                     </div>
                 </div>
                 <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns col-lg-4">
-                    <a href="#">إتصل بنا</a>
-                    <a href="#">إرسل طلبك</a>
+                    <a href="call_us_AR.html">إتصل بنا</a>
+                    <a href="connect_with_us_AR.html">إرسل طلبك</a>
                 </div>
             </div>
         </div>
