--- a/connect_with_us_AR.html
+++ b/connect_with_us_AR.html
@@ -54,18 +54,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="jobs_AR.html">الوظائف</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link active" href="errorPage_AR.html">تواصل معنا</a>
-                    </li> -->
-
-                    <li class="nav-item dropdown connectWithUsDropDown">
-                        <a class="nav-link active">
-                            تواصل معنا
-                        </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="connect_with_us_AR.html">تواصل معنا</a>
-                            <a class="dropdown-item" href="call_us_AR.html">اتصل بنا</a>
-                        </div> 
+                    <li class="nav-item">
+                        <a class="nav-link active" href="connect_with_us_AR.html">تواصل معنا</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hsse_AR.html">HSSE</a>
@@ -112,18 +102,8 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="jobs_AR.html">الوظائف</a>
                             </li>
-                            <!-- <li class="nav-item">
-                                <a class="nav-link active" href="errorPage_AR.html">تواصل معنا</a>
-                            </li> -->
-
-                            <li class="nav-item dropdown connectWithUsDropDown">
-                                <a class="nav-link active">
-                                    تواصل معنا
-                                </a>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="connect_with_us_AR.html">تواصل معنا</a>
-                                    <a class="dropdown-item" href="call_us_AR.html">اتصل بنا</a>
-                                </div> 
+                            <li class="nav-item">
+                                <a class="nav-link active" href="connect_with_us_AR.html">تواصل معنا</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="hsse_AR.html">HSSE</a>
@@ -222,8 +202,8 @@
                     </div>
                 </div>
                 <div data-wow-delay="0.4s" class="wow InquiriesComplaintsBtns col-lg-4">
-                    <a href="#">إتصل بنا</a>
-                    <a href="#">إرسل طلبك</a>
+                    <a href="call_us_AR.html">إتصل بنا</a>
+                    <a href="connect_with_us_AR.html">إرسل طلبك</a>
                 </div>
             </div>
         </div> 
