--- a/index_EN.html
+++ b/index_EN.html
@@ -132,7 +132,7 @@
     <main>
         <div class="mainTools">
             <ul>
-                <li class="d-flex" data-wow-delay="0.6s">
+                <li class="d-flex wow" data-wow-delay="0.6s">
                     <div class="liSectionItems">
                         <i class="fas fa-search"></i>
                         <div class="toolSectionData d-flex align-items-center">
@@ -140,7 +140,7 @@
                         </div> 
                     </div>
                 </li>
-                <li class="d-flex" data-wow-delay="0.8s">
+                <li class="d-flex wow" data-wow-delay="0.8s">
                     <div class="liSectionItems">
                         <i class="fab fa-facebook-f"></i>
                         <div class="toolSectionData d-flex align-items-center">
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="d-flex" data-wow-delay="1s">
+                <li class="d-flex wow" data-wow-delay="1s">
                     <div class="liSectionItems">
                         <i class="fas fa-phone-alt"></i>
                         <div class="toolSectionData d-flex align-items-center">
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="d-flex" data-wow-delay="1.2s">
+                <li class="d-flex wow" data-wow-delay="1.2s">
                     <div class="liSectionItems">
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="toolSectionData d-flex align-items-center">
@@ -164,7 +164,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="d-flex" data-wow-delay="1.4s">
+                <li class="d-flex wow" data-wow-delay="1.4s">
                     <div class="liSectionItems">
                         <i class="fas fa-calculator"></i>
                         <div class="toolSectionData d-flex align-items-center">
