--- a/index_AR.html
+++ b/index_AR.html
@@ -191,15 +191,15 @@
                                 </div>
                                 <div class="fuelConsumption d-flex align-items-center justify-content-between">
                                     <h2>استهلاك الوقود باللتر</h2>
-                                    <input type="text" id="fuelConsumptionInput" value="0">
+                                    <input type="number" id="fuelConsumptionInput" value="0">
                                 </div>
                                 <div class="gasoline92 d-flex align-items-center justify-content-between">
                                     <h2>بنزين 92</h2>
-                                    <input type="text" id="gasoline92Input" value="0">
+                                    <input type="number" id="gasoline92Input" value="0">
                                 </div>
                                 <div class="naturalGas d-flex align-items-center justify-content-between">
                                     <h2>غاز طبيعي</h2>
-                                    <input type="text" id="naturalGasInput" value="0">
+                                    <input type="number" id="naturalGasInput" value="0">
                                 </div>
                                 <div class="calcResult d-flex align-items-center">
                                     <div class="calcBtnSec col-3 d-flex">
